deploy/java_api.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: java-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: java-api
  template:
    metadata:
      labels:
        app: java-api
    spec:
      containers:
        - name: api-java
          image: gabylilith/api-java
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-api-service
spec:
  selector:
    app: java-api
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
